# passport2

./: .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Justfile  MP-README.md  README.md  REPRODUCIBILITY.md  run.sh  version.txt
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml  bug-report.md  config.yaml  feature-request.md
.github/workflows/: build.yaml  dependabot.yaml  lint.yaml  validate_and_build.yaml
.reuse/: dep5
LICENSES/: BSD-2-Clause-Patent.txt
SECURITY/: SECURITY.md
extmod/: extmod.mk  vfs_blockdev.c  vfs_fat_file.c
extmod/foundation/: bip39_utils.c  bip39_utils.h  bip39_word_info.c  bytewords_word_info.c  image_conversion.c  image_conversion.h  modfoundation-bip39.h  modfoundation-flash.h  modfoundation-psbt.h  modfoundation-qr.h  modfoundation-secp56k1.h  modfoundation-spi.h  modfoundation-ur.h  modfoundation.c  modlogging.c  modlogging.h  modtcc-codecs.c  qrcode.c  qrcode.h  strnlen.c
extmod/foundation-rust/: .rustfmt.toml  Cargo.lock.license  Cargo.toml  Justfile  bindgen.sh  cbindgen.toml  includes.awk
extmod/foundation-rust/.cargo/: config.toml
extmod/foundation-rust/bindings/: Cargo.toml  cbindgen.toml
extmod/foundation-rust/bindings/src/: io.rs  lib.rs  rand.rs  secp256k1.rs
extmod/foundation-rust/bindings/src/io/: spi_nor.rs
extmod/foundation-rust/bindings/src/ur/: encoder.rs  mod.rs
extmod/foundation-rust/cmsis-device-h7-sys/: Cargo.toml  bindings.h
extmod/foundation-rust/cmsis-device-h7-sys/src/: gen.rs  gen.rs.license  lib.rs
extmod/foundation-rust/embedded-storage-fs/: Cargo.toml
extmod/foundation-rust/embedded-storage-fs/src/: lib.rs
extmod/foundation-rust/embedded-storage-redundant/: Cargo.toml
extmod/foundation-rust/embedded-storage-redundant/src/: lib.rs
extmod/foundation-rust/include/: foundation.h
extmod/foundation-rust/platform/: Cargo.toml
extmod/foundation-rust/platform/src/: lib.rs
extmod/foundation-rust/platform/src/stm32/: ffi.rs  io.rs  mod.rs  rand.rs  rt.rs  secp256k1.rs
extmod/foundation-rust/platform/src/stm32/io/: spi.rs  spi_nor.rs
extmod/foundation-rust/platform/src/unix/: mod.rs
extmod/foundation-rust/platform/src/unix/io/: spi_nor.rs
extmod/foundation-rust/platform/stm32/: Cargo.toml
extmod/foundation-rust/platform/stm32/src/: ffi.rs  io.rs  lib.rs  rand.rs  rt.rs
extmod/foundation-rust/platform/stm32/src/io/: spi.rs
extmod/foundation-rust/platform/unix/: Cargo.toml
extmod/foundation-rust/platform/unix/src/: lib.rs
extmod/foundation-rust/spi-nor/: Cargo.toml
extmod/foundation-rust/spi-nor/src/: lib.rs
extmod/foundation-rust/src/: bip32.rs  bitcoin.rs  firmware.rs  flash.rs  lib.rs  psbt.rs  rand.rs  secp256k1.rs  stdout.rs
extmod/foundation-rust/src/ur/: decoder.rs  encoder.rs  mod.rs  registry.rs
extmod/foundation-rust/stm32h753-hal/: Cargo.toml
extmod/foundation-rust/stm32h753-hal/src/: gpio.rs  lib.rs  rcc.rs
extmod/foundation-rust/stm32h7xx-hal-driver/: Cargo.toml
extmod/foundation-rust/stm32h7xx-hal-driver-sys/: Cargo.toml  bindgen.sh  bindings.h  includes.awk
extmod/foundation-rust/stm32h7xx-hal-driver-sys/src/: gen.rs  lib.rs
extmod/foundation-rust/stm32h7xx-hal-driver/src/: lib.rs
extmod/foundation-rust/w25q64jv/: Cargo.toml
extmod/foundation-rust/w25q64jv/src/: lib.rs
extmod/foundation-rust/w25q64jv/tests/: mock.rs
extmod/quirc/: decode.c  identify.c  quirc.c  quirc.h  quirc_internal.h  version_db.c
extmod/trezor-firmware/core/embed/extmod/: trezorobj.h
extmod/trezor-firmware/crypto/: bip32.c  ecdsa.c  ecdsa.h  hasher.c  hasher.h  memzero.c  rand.c  secp256k1.c
extmod/trezor-firmware/docs/storage/assets/: key-derivation.odg
lib/axtls/ssl/test/: make_certs.sh
lib/libm_dbl/: __rem_pio2_large.c
lib/lv_bindings/: lv_conf.h
lib/lv_bindings/lib/: display_driver_utils.py  fs_driver.py
lib/lv_bindings/lvgl/: lv_conf_template.h  lvgl.h
lib/lv_bindings/lvgl/src/: lv_conf_internal.h
lib/lv_bindings/lvgl/src/core/: lv_core.mk  lv_indev.c  lv_obj_scroll.c  lv_obj_tree.c  lv_refr.c
lib/oofatfs/: ff.c
lib/stm32lib/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_ll_sdmmc.h
lib/stm32lib/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_sd.c  stm32h7xx_ll_sdmmc.c
mpy-cross/: Makefile  main.c
ports/stm32/: Justfile  Makefile  adc.c  extint.c  flash.c  flashbdev.c  led.c  main.c  make-stmconst.py  modmachine.c  modpyb.c  moduos.c  mpconfigboard_common.h  mpconfigport.h  mphalport.c  powerctrl.c  pyb_spi.c  sdcard.c  sdio.c  stm32_it.c  stm32h7x.cfg  system_stm32.c
ports/stm32/boards/: make-pins.py  stm32h753.ld
ports/stm32/boards/Passport/: .clang-format  adc.c  adc.h  board_init.c  board_init.h  camera-ovm7690.c  camera-ovm7690.h  debug-utils.c  debug-utils.h  dispatch.c  dispatch.h  framebuffer.c  framebuffer.h  frequency.c  frequency.h  manifest.py  manifest_dev.py  modpassport-backlight.h  modpassport-boardrev.h  modpassport-camera.h  modpassport-dtcm.h  modpassport-fuelgauge.h  modpassport-mem.h  modpassport-noise.h  modpassport-powermon.h  modpassport-settingsflash.h  modpassport-sram4.h  modpassport-system.h  modpassport.c  modpassport_lv-keypad.h  modpassport_lv-lcd.h  modpassport_lv.c  mpconfigboard.h  mpconfigboard.mk  noise.c  noise.h  passport.ld  pins.c  pins.csv  pins.h  (+6 more)
ports/stm32/ditto/: config.yml
ports/unix/: Makefile  main.c  modpassport_lv-keypad.h  modpassport_lv-lcd.h  modpassport_lv.c  mpconfigport.h  mpconfigport.mk  ring_buffer.c  ring_buffer.h
ports/unix/variants/dev/: mpconfigvariant.mk
py/: dynruntime.mk  makeversionhdr.py  mkenv.mk  mkrules.mk  mpconfig.h  mperrno.h  py.mk  stackctrl.c  stream.c
simulator/: Justfile  Makefile  README.md  SIMULATOR.md  camera_driver.py  requirements.txt  sim_boot.py  simulator.py  unix_random.c
simulator/sim_modules/: ffilib.py  keypad_worker.py  pincodes.py  pyb.py  settings.py  sflash.py
simulator/sim_modules/passport/: __init__.py  camera.py  mem.py  sram4.py
simulator/variant/simulator/: mpconfigvariant.h  mpconfigvariant.mk
tools/: genkeys.sh  makemanifest.py
(+810 files in other folders)
