# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "sizes"
required-features = ["std"]

[dependencies.bitcoin_hashes]
version = "0.13"
features = ["small-hash"]
default-features = false

[dependencies.minicbor]
version = "0.24"
default-features = false

[dependencies.heapless]
version = "0.8"
default-features = false

[dependencies.uuid]
version = "1"
default-features = false

[dependencies.foundation-ur]
version = "0.2"
default-features = false

[dependencies.foundation-urtypes]
version = "0.3"
default-features = false

[target.'cfg(target_arch = "arm")'.dependencies.cortex-m]
version = "0.7"
features = ["cm7", "critical-section-single-core"]

[dependencies.critical-section]
version = "1"

[dependencies.once_cell]
version = "1"
default-features = false
features = ["critical-section"]

[dependencies.secp256k1]
version = "0.29"
default-features = false
features = ["lowmemory", "rand"]

[dependencies.rand]
version = "0.8.5"
default-features = false

[target.'cfg(not(target_arch = "arm"))'.dependencies.rand]
version = "0.8.5"
features = ["std", "std_rng"]

[dependencies.rand_core]
version = "0.6.4"
default-features = false

[features]
default = []
std = ["rand/std", "critical-section/std"]

[lib]
crate-type = ["lib", "staticlib"]

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
