# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
    "cmsis-device-h7-sys",
    "embedded-storage-fs",
    "embedded-storage-redundant",
    "stm32h7xx-hal-driver",
    "stm32h7xx-hal-driver-sys",
    "w25q64jv",
]

[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "sizes"
required-features = ["std"]

[dependencies.bitcoin_hashes]
version = "0.15"
features = ["small-hash"]
default-features = false

[dependencies.embedded-storage]
version = "0.3"

[target.'cfg(not(target_arch = "arm"))'.dependencies.embedded-storage-fs]
version = "0.1"
path = "embedded-storage-fs"

[dependencies.embedded-storage-redundant]
version = "0.1"
path = "embedded-storage-redundant"

[dependencies.minicbor]
version = "0.24"
default-features = false

[dependencies.heapless]
version = "0.8"
default-features = false

[dependencies.uuid]
version = "1"
default-features = false

[dependencies.foundation-firmware]
version = "0.2"
default-features = false

[dependencies.foundation-ur]
version = "0.4"
default-features = false

[dependencies.foundation-urtypes]
version = "0.4.1"
default-features = false

[target.'cfg(target_arch = "arm")'.dependencies.cortex-m]
version = "0.7"
features = ["cm7", "critical-section-single-core"]

[dependencies.critical-section]
version = "1"

[dependencies.once_cell]
version = "1"
default-features = false
features = ["critical-section"]

[dependencies.secp256k1]
version = "0.30"
default-features = false
features = ["lowmemory", "rand"]

[dependencies.rand]
version = "0.8.5"
default-features = false

[target.'cfg(not(target_arch = "arm"))'.dependencies.rand]
version = "0.8.5"
features = ["std", "std_rng"]

[dependencies.rand_core]
version = "0.6.4"
default-features = false

[dependencies.w25q64jv]
version = "0.1"
path = "w25q64jv"

[target.'cfg(target_arch = "arm")'.dependencies.cmsis-device-h7-sys]
path = "cmsis-device-h7-sys"

[target.'cfg(target_arch = "arm")'.dependencies.stm32h7xx-hal-driver]
path = "stm32h7xx-hal-driver"

[features]
default = []
std = ["rand/std", "critical-section/std"]

[lib]
crate-type = ["lib", "staticlib"]

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
