# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
std = [
    "passport-platform/std"
]

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "sizes"
required-features = ["std"]

[dependencies]
foundation-ur = { branch = "main", git = "https://github.com/Foundation-Devices/foundation-rs", default-features = false }
foundation-urtypes = { branch = "main", git = "https://github.com/Foundation-Devices/foundation-rs", default-features = false }
heapless = { version = "0.8", git = "https://github.com/japaric/heapless", default-features = false }
minicbor = { version = "0.19", default-features = false }
passport-platform = { path = "../platform", default-features = false }
secp256k1 = { version = "0.28", features = ["rand"], default-features = false }
uuid = { version = "1", default-features = false }
