# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "stm32h753-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
stm32h7 = { version = "0.15", features = ["stm32h753"], default-features = false }
